Change game-tourn assoc to one-to-many. Make seedfile work with new fields

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -26,7 +26,7 @@
   <div class="col-md-12">
     <div class="portfolio-item thumbnail">
       <% if @tournament.image_default %>
-      <img class="hidden-xs" src="<%= @tournament.large %>">
+      <img class="hidden-xs" src="<%= @tournament.image_large %>">
       <img class="hidden-lg hidden-sm hidden-md" src="<%= @tournament.image_default %>">
       <% else %>
       <img class="grayscale" style="max-height:200px; width:100%" src="http://goo.gl/7ezbJB">
@@ -63,7 +63,7 @@
     <% if @tournament.streams.any? %>
       <% @tournament.streams.each do |stream| %>
       <section style="padding-bottom:10px">
-        <span class="h2"><i class="fa red fa-video-camera"></i> <%= link_to "Stream", stream.link %>
+        <span class="h2"><i class="fa red fa-video-camera"></i> <%= link_to "Stream", stream.url %>
 
                    <span class="mon date"><%= Date::MONTHNAMES[@tournament.start.mon] %></span>
           <span class="day date"><%= @tournament.start.day %></span>
