--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -468,6 +468,10 @@ img.grayscale:hover
   filter: none
   -webkit-filter: grayscale(0%)
 
+img.grayscale:focus
+  filter: none
+  -webkit-filter: grayscale(0%)
+
 svg image
   transition: all .6s ease
 
@@ -488,3 +492,6 @@ section.container-fluid
   background: -ms-linear-gradient(left, rgba(53,106,160,1) 0%, rgba(53,106,160,1) 20%, rgba(176,43,44,1) 20%, rgba(176,43,44,1) 24%, rgba(176,43,44,1) 100%)
   background: linear-gradient(to right, rgba(53,106,160,1) 0%, rgba(53,106,160,1) 50%, rgba(176,43,44,1) 80%, rgba(176,43,44,1) 24%, rgba(176,43,44,1) 100%)
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#356aa0', endColorstr='#b02b2c', GradientType=1 )
+
+.no-padding-right
+  padding-right: 0px !important
