--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
           <li><a href="/users/<%= current_user.id %>">Logged in as <%= current_user.email %></a></li>
           <li><%= link_to('Log out', destroy_user_session_path, :method => :delete, class: "text-right") %></li>
         <% else %>
-          <li><%= link_to('log in', user_omniauth_authorize_path(:google_oauth2), class: "text-right") %></li>
+          <li><%= link_to('log in', user_omniauth_authorize_path(:google_oauth2), class: " no-padding-right text-right") %></li>
         <% end %>
       </ul>
     </div>
