--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row" style="padding-top:15px">
+<div class="row pad-top-sm">
   <div class="col-md-12">
     <div class="row portfolio-item thumbnail infoplus">
       <span class="h3"><%= @user.name %></span><br><hr>
@@ -8,7 +8,7 @@
 </div>
 
 
-<div class="row" style="padding-top:30px">
+<div class="row pad-top">
   <div class="col-md-6">
     <div class="row portfolio-item thumbnail infoplus">
       <span class="h3">Favorite Tournaments</span>
