--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,10 +50,10 @@
     <div class="container">
       <p class="footer-block">
         <span class="small pull-left">
-          <b class"black">eSportal</b> has been handcrafted with <i class="fa small p fa-heart red"></i> by <a href="https://github.com/manisaguana">Armani</a>, <a href="https://github.com/edella2">Eric</a>, <a href="https://github.com/peterwiebe">Peter</a>, <a href="https://github.com/gastongouron">Paul</a> and <a href="https://github.com/stevula">Steven</a>.
+          <b class"black">eSportal</b> has been handcrafted with <i class="fa small p fa-heart red"></i> by <a href="">Armani</a>, <a href="">Eric</a>, <a href="">Peter</a>, <a href="">Paul</a> and <a href="">Steven</a>.
         </span>
         <span class="small pull-right black hidden-sm hidden-xs">
-          <a href="mailto:contact.esportal@gmail.com"><i class="fa fa-2x fa-envelope"></i></i></a>&nbsp; &nbsp; &nbsp;<a href="https://github.com/edella2/eSportal"><i class="fa fa-2x fa-github-square"></i></i></a>
+          <a href=""><i class="fa fa-2x fa-envelope"></i></i></a>&nbsp; &nbsp; &nbsp;<a href=""><i class="fa fa-2x fa-github-square"></i></i></a>
         </span>
       </p>
     </div>
