--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -17,13 +17,9 @@
     <!-- Dropdown button -->
     <div class="btn pull-right">
 
-      <select name="game_id" id="game_id">
-        <% @games.each do |game| %>
-        <option><%= link_to game_path(game) %></option>
-        <% end %>
-      </select>
-
-
+    <% form_tag(tournaments_path, :method => "get") do %>
+      <%= select( :tournament, :index, Game.all.collect {|game| game.title}, {include_blank: 'All'}, onchange: "tournaments_path({search: game.title})") %>
+    <% end %>
     </div>
     <!-- Dropdown button end -->
     <div class="btn-group btn pull-right" role="group" aria-label="...">
@@ -159,15 +155,3 @@ $("#no-queue div").hover(function(){
     $(this).animate({ width: "100px" }, {queue: false});
 });
 </script>
-
-
-
-
-
-
-
-
-
-
-
-
