--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -65,6 +65,13 @@ a:hover
 .coolblue
   color: $coolblue
 
+.pale-grey
+  color: silver
+
+.pale-grey:hover
+  color: $warning_color
+  transition: color .3s linear, background-color .3s linear
+
 .grey
   color: grey
   font-weight: 300
@@ -103,6 +110,9 @@ a:hover
 .base-prop
   max-height: 200px
   width: 100%
+
+.light-text
+  font-weight: 300
 
 .miniinfo
   -webkit-box-shadow: 0 10px 6px -6px #777
