--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
           <b class"black">eSportal</b> has been handcrafted with <i class="fa small p fa-heart red"></i> by <a href="">Armani</a>, <a href="">Eric</a>, <a href="">Peter</a>, <a href="">Paul</a> and <a href="">Steven</a>.
         </span>
         <span class="small pull-right black hidden-sm hidden-xs">
-          <a href=""><i class="fa fa-2x fa-envelope"></i></i></a>&nbsp; &nbsp; &nbsp;<a href=""><i class="fa fa-2x fa-github-square"></i></i></a>
+          <a href=""><i class="fa pale-grey fa-2x fa-envelope"></i></i></a>&nbsp; &nbsp; &nbsp;<a href=""><i class="fa pale-grey fa-2x fa-github-square"></i></i></a>
         </span>
       </p>
     </div>
