follow unfollow tournaments

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -24,26 +24,32 @@
 <div class="row">
   <div class="col-md-12">
     <div class="portfolio-item thumbnail">
+      
       <% if @tournament.image_default %>
-      <img class="hidden-xs" src="<%= @tournament.image_large %>">
-      <img class="hidden-lg hidden-sm hidden-md" src="<%= @tournament.image_default %>">
+        <img class="hidden-xs" src="<%= @tournament.image_large %>">
+        <img class="hidden-lg hidden-sm hidden-md" src="<%= @tournament.image_default %>">
       <% else %>
-      <img class="grayscale base-prop" src="http://goo.gl/7ezbJB">
+        <img class="grayscale base-prop" src="http://goo.gl/7ezbJB">
       <% end %>
 
       <% if current_user %>
-      <% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: @tournament.id, favoritable_type: "Tournament"}} %>
+        <% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: @tournament.id, favoritable_type: "Tournament"}} %>
       <% end %>
-      <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
-      <i class="fa fa-heart"></i> Follow
+        
+      <% unless User.find(current_user.id).favorites.where(favoritable_id: @tournament.id).exists? %>
+        <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
+        <i class="fa fa-heart"></i> Follow
+        <% end %>
+      <% else %>
+        <%= button_to favorite_path(favorite_params), method: "delete", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
+        <i class="fa fa-heart"></i> Unfollow
+        <% end %>
       <% end %>
+
       <%= button_to subscriptions_path(favorite_params), action: "create", class: "buttony btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
-
-    </a>
-
-      <%#= button_to favorites_path(favorite_params), action: "create", class: "buttony btn btn-default", 'aria-label' => "Left Align" do %>
-      <i class="fa fa-calendar-plus-o"></i> Subscribe
+        <i class="fa fa-calendar-plus-o"></i> Subscribe
       <% end %>
+   
     </div>
 
   </div>
@@ -92,6 +98,8 @@
     </div>
 
    </div>
+
+
 
 
 <script>
