--- a/app/views/competitors/show.html.erb
+++ b/app/views/competitors/show.html.erb
@@ -1,7 +1,27 @@
 <div class="row" style="padding-top:15px">
   <div class="col-md-12">
     <div class="row portfolio-item thumbnail infoplus">
-      <span class="h3"><%= @competitor.name %></span><br><hr>
+      <span class="h3"><%= @competitor.name %></span>
+      
+      <% if current_user %>
+      	<% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: @competitor.id, favoritable_type: "Competitor"}} %>
+      <% end %>
+
+      <% unless User.find(current_user.id).favorites.where(favoritable_id: @competitor.id).exists? %>
+        <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
+        <i class="fa fa-heart"></i> Follow
+        <% end %>
+      <% else %>
+        <%= button_to favorite_path(favorite_params), method: "delete", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
+        <i class="fa fa-heart"></i> Unfollow
+        <% end %>
+      <% end %>
+
+
+      <%= button_to favorite_path(favorite_params), method: "delete", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
+       <i class="fa fa-heart"></i> Unfollow
+       <% end %>
+      <br><hr>
     </div>
   </div>
 </div>
