WIP/infinite scroll brokes everything <3

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -86,6 +86,10 @@ a:hover
 .white
   color: white
 
+.esportal-nav
+  color: blue
+  height: 54px
+
 .no-padding-right
   padding-right: 0px !important
 
