--- a/app/views/competitors/show.html.erb
+++ b/app/views/competitors/show.html.erb
@@ -8,19 +8,14 @@
       <% end %>
 
       <% unless User.find(current_user.id).favorites.where(favoritable_id: @competitor.id).exists? %>
-        <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
+        <%= button_to favorites_path(favorite_params), action: "create", class: " btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
         <i class="fa fa-heart"></i> Follow
         <% end %>
       <% else %>
-        <%= button_to favorite_path(favorite_params), method: "delete", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
+        <%= button_to favorite_path(favorite_params), method: "delete", class: " btn btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
         <i class="fa fa-heart"></i> Unfollow
         <% end %>
       <% end %>
-
-
-      <%= button_to favorite_path(favorite_params), method: "delete", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
-       <i class="fa fa-heart"></i> Unfollow
-       <% end %>
       <br><hr>
     </div>
   </div>
