--- a/app/views/tournaments/index_calendar.html.erb
+++ b/app/views/tournaments/index_calendar.html.erb
@@ -2,7 +2,18 @@
 
   <div class="col-md-12">
     <div class="btn pull-right">
-     <button class="btn btn-warning btn-border dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"> Game <span class="caret"></span></button>
+
+
+
+      <div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Games<span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <% @games.each do |game| %>
+            <li><%= link_to game.title ,game_path(game, calendar_sort: game.title) %></li>
+          <% end %>
+        </ul>
+      </div>
+
     </div>
 
     <div class="btn-group btn pull-right" role="group" aria-label="...">
