--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -31,17 +31,15 @@
         <img class="grayscale base-prop" src="http://goo.gl/7ezbJB">
       <% end %>
 
-      <% if current_user %>
+      <% if user_signed_in? %>
         <% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: @tournament.id, favoritable_type: "Tournament"}} %>
       <% end %>
 
-      <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
+      <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
         <i class="fa fa-heart"></i> Follow
       <% end %>
 
-      <%= button_to subscriptions_path(favorite_params), action: "create", class: "buttony btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
-
-    </a>
+      <%= button_to subscriptions_path(favorite_params), action: "create", class: "buttony btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
 
       <%#= button_to favorites_path(favorite_params), action: "create", class: "buttony btn btn-default", 'aria-label' => "Left Align" do %>
       <i class="fa fa-calendar-plus-o"></i> Subscribe
@@ -62,9 +60,9 @@
       <section>
         <p>  <b>Location: <%= @tournament.city %></b> – <%= @tournament.description.gsub(/(&nbsp;)/, ' ') %></p>
       </section>
-    </div>
+  </div>
 
-    <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
+  <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
     <% if @tournament.streams.any? %>
       <% @tournament.streams.each do |stream| %>
       <section class="pad-bot-sm">
@@ -79,24 +77,23 @@
       </section>
       <% end %>
     <% else %>
-    <section>
-      <p>Stream list soon</p>
-    </section>
+      <section>
+        <p>Stream list soon</p>
+      </section>
     <% end %>
+
     <section>
-
       <% @tournament.competitors.each do |competitor| %>
-      <% if current_user %>
-      <% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: competitor.id, favoritable_type: "Competitor"}} %>
+        <% if user_signed_in? %>
+          <% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: competitor.id, favoritable_type: "Competitor"}} %>
+        <% end %>
+        <%= button_to competitor.name, favorites_path(favorite_params), action: "create", class: "btn-competitor btn btn-xs btn-default", disabled: !user_signed_in? %>
       <% end %>
-      <%= button_to competitor.name, favorites_path(favorite_params), action: "create", class: "btn-competitor btn btn-xs btn-default", disabled: !current_user %>
-      <% end %>
-
     </section>
 
-    </div>
+  </div>
 
-   </div>
+</div>
 
 
 <script>
