fix merge conflicts

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -45,14 +45,9 @@
           <% end %>
         <% end %>
 
-<<<<<<< HEAD
-      <%= button_to subscriptions_path(favorite_params),id: 'sub_text', action: "create", class: "buttony btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !current_user do %>
-        <i class="fa fa-calendar-plus-o"></i> Subscribe
-=======
-        <%= button_to subscriptions_path(favorite_params), action: "create", class: "buttony btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
+        <%= button_to subscriptions_path(favorite_params),id: 'sub_text', action: "create", class: "buttony btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
           <i class="fa fa-calendar-plus-o"></i> Subscribe
         <% end %>
->>>>>>> 8da21461e623de48a3f4803451951e4a4c32bd75
       <% end %>
     </div>
 
