--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>eSportal</title>
   <script src="https://code.jquery.com/jquery-git2.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <%= favicon_link_tag 'favicon.ico' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+      <%= csrf_meta_tags %>
+        <%= favicon_link_tag 'favicon.ico' %>
 </head>
+
 <body>
 
-<nav class="navbar navbar-default">
-  <section class="container-fluid esportal-nav">
-  <div class="container" style="background-color:#B02B2C">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-       <a style="solid blue" class="navbar-brand" href="/tournaments">
-        <%= image_tag("esportal.png", :alt => "rss feed") %>
-        </a>
-    </div>
-    <div class="collapse navbar-collapse pull-right" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <% if current_page_is_tournament? || current_page_is_calendar? %>
-          <li><a href="/tournaments" class="text-right"><i style="padding-top:2px" class="appzicon fa fa-th"></i></a></li>
-          <li><a href="/calendar" class="text-right"><i class="appzicon text-right fa fa-calendar-o"></i></a></li>
-        <% end %>
-        <% if user_signed_in? %>
-          <li><a href="/users/<%= current_user.id %>">Logged in as <%= current_user.email %></a></li>
-          <li><%= link_to('Log out', destroy_user_session_path, :method => :delete, class: "no-padding-right text-right") %></li>
-        <% else %>
-          <li><%= link_to('log in', user_omniauth_authorize_path(:google_oauth2), class: "no-padding-right text-right") %></li>
-        <% end %>
-      </ul>
-    </div>
-   </div>
-  </section>
-</nav>
+  <nav class="navbar navbar-default">
+    <section class="container-fluid esportal-nav">
+      <div class="container" style="background-color:#B02B2C">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a style="solid blue" class="navbar-brand" href="/tournaments">
+            <%= image_tag("esportal.png", :alt => "rss feed") %>
+          </a>
+        </div>
+        <div class="collapse navbar-collapse pull-right" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <% if current_page_is_tournament? || current_page_is_calendar? %>
+              <li><a href="/tournaments" class="text-right"><i style="padding-top:2px" class="appzicon fa fa-th"></i></a></li>
+              <li><a href="/calendar" class="text-right"><i class="appzicon text-right fa fa-calendar-o"></i></a></li>
+              <% end %>
+            <% if user_signed_in? %>
+              <li><a href="/users/<%= current_user.id %>">Logged in as <%= current_user.email %></a></li>
+              <li><%= link_to('Log out', destroy_user_session_path, :method => :delete, class: "no-padding-right text-right") %></li>
+            <% else %>
+              <li><%= link_to('log in', user_omniauth_authorize_path(:google_oauth2), class: "no-padding-right text-right") %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </nav>
 
-<div class="container" style="padding-top:65px">
-  <%= yield %>
-</div>
+  <div class="container" style="padding-top:65px">
+    <%= yield %>
+  </div>
 
-<div id="footer">
+  <div id="footer">
     <div class="container">
       <p class="footer-block">
         <span class="small pull-left">
-          <b class"black">eSportal</b> has been handcrafted with <i class="fa small p fa-heart red"></i> by <a href="">Armani</a>, <a href="">Eric</a>, <a href="">Peter</a>, <a href="">Paul</a> and <a href="">Steven</a>.
+          <b class "black">eSportal</b> has been handcrafted with <i class="fa small p fa-heart red"></i> by <a href="">Armani</a>, <a href="">Eric</a>, <a href="">Peter</a>, <a href="">Paul</a> and <a href="">Steven</a>.
         </span>
         <span class="small pull-right black hidden-sm hidden-xs">
           <a href=""><i class="fa pale-grey fa-2x fa-envelope"></i></i></a>&nbsp; &nbsp; &nbsp;<a href=""><i class="fa pale-grey fa-2x fa-github-square"></i></i></a>
@@ -59,4 +62,5 @@
     </div>
   </div>
 </body>
+
 </html>
