add display none to pagination class to hide bar

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -54,6 +54,9 @@ a:hover
   color: #356AA0
   font-weight: italic
 
+div.pagination
+  display: none
+
 /* Pauls Helpers */
 .appzicon
   font-size: 20px
