--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -44,8 +44,10 @@
     </div>
   </div>
 </div>
+</div>
 
 
+<div class="container special">
   <div id="my-tournaments">
     <%= render @tournaments %>
   </div>
@@ -53,6 +55,9 @@
   <div id="infinite-scrolling">
     <%= will_paginate %>
   </div>
+</div>
+
+
 
   <script>
     $('img').hover(function () {
