--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1588,6 +1588,13 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+.special {
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
@@ -1603,6 +1610,23 @@ pre code {
     width: 1170px;
   }
 }
+
+@media (min-width: 768px) {
+  .special {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .special {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .special {
+    width: 1170px;
+  }
+}
+
 .container-fluid {
   padding-right: 15px;
   padding-left: 15px;
