--- a/app/views/competitors/show.html.erb
+++ b/app/views/competitors/show.html.erb
@@ -1,24 +1,24 @@
 <div class="row" style="padding-top:15px">
   <div class="col-md-12">
     <div class="row portfolio-item thumbnail infoplus">
-      <span class="h3"><%= @competitor.name %></span><br><hr>
-      <span><%= @competitor.favorites.count %> followers</span>
       <span class="h3"><%= @competitor.name %></span>
       <% if user_signed_in? %>
-      	<% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: @competitor.id, favoritable_type: "Competitor"}} %>
+        <% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: @competitor.id, favoritable_type: "Competitor"}} %>
       <% end %>
+<span class="pull-right">
       <% if current_user.favorites.where(favoritable_id: @competitor.id).any? %>
-        <%= button_to favorite_path(favorite_params), method: "delete", class: " btn btn-default", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
+        <%= button_to favorite_path(favorite_params), method: "delete", class: " btn btn-warning btn-border", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
         <i class="fa fa-heart"></i> Unfollow
         <% end %>
       <% else %>
-        <%= button_to favorites_path(favorite_params), action: "create", class: " btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
-        <i class="fa fa-heart"></i> Follow
+        <%= button_to favorites_path(favorite_params), action: "create", class: " btn btn-warning btn-border", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
+        <i class="fa fa-heart-o"></i> Follow
         <% end %>
       <% end %>
-      <br><hr>
+</span>
+    <br><hr>
+      <span><%= @competitor.favorites.count %> followers</span>
+
     </div>
   </div>
 </div>
-
-
