--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -96,6 +96,9 @@ div.pagination
 .no-padding-right
   padding-right: 0px !important
 
+.no-padding-left
+  padding-left: 0px !important
+
 .pad-top
   padding-top: 30px
 
