--- a/app/views/tournaments/index_calendar.html.erb
+++ b/app/views/tournaments/index_calendar.html.erb
@@ -1,6 +1,6 @@
 <div class="row" style="padding-bottom:15px">
   <div class="col-md-12">
-    <div class="btn pull-right">
+    <div class="btn no-padding-left">
       <div class="btn-group">
         <button type="button" class="btn btn-warning btn-border dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Games<span class="caret"></span></button>
         <ul class="dropdown-menu">
