--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -124,6 +124,9 @@ div.pagination
 .light-text
   font-weight: 300
 
+.md-text
+  font-weight: 600
+
 .miniinfo
   -webkit-box-shadow: 0 10px 6px -6px #777
   -moz-box-shadow: 0 10px 6px -6px #777
