--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -8,8 +8,8 @@
 
   <div class="col-md-12 col-sm-12">
     <div class="row">
-      <div class="col-md-6 col-sm-6 h1"><%= @tournament.short_title %></div>
-       <div class="col-md-6 col-sm-6 h1 grey text-right">
+      <div class="col-md-6 col-sm-6 h1"><%= get_game_title(@tournament.game_id) %>: <span class="light-text"><%= @tournament.short_title %></span> </div>
+       <div class="col-md-6 light-text col-sm-6 h1 text-right">
         <span id="clockdiv">
           <span class="days text-right"></span> <span class="hours"></span><span class="minutes"></span><span class="seconds"></span>
         </span>
@@ -54,7 +54,7 @@
   <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
     <div class="hidden-sm hidden-xs" style="border-right:1px solid black"></div>
       <section class="pad-bot-sm">
-        <span class="h2"><%= @tournament.title %></span>
+        <span class="h2 light-text"><%= @tournament.title %></span>
       </section>
       <section>
         <p>  <b>Location: <%= @tournament.city %></b> – <%= @tournament.description.gsub(/(&nbsp;)/, ' ') %></p>
@@ -65,7 +65,7 @@
     <% if @tournament.streams.any? %>
       <% @tournament.streams.each do |stream| %>
       <section class="pad-bot-sm">
-        <span class="h2"><i class="fa pale-grey fa-video-camera"></i> <%= link_to "Stream", stream.url %>
+        <span class="h2"><%= link_to stream.url do %><i class="fa fa-globe"></i> Stream</i><% end %>
 
           <span class="light-text pull-right"><%= @tournament.favorites.count %> followers</span>
         </span>
