--- a/app/views/tournaments/_tournament.html.erb
+++ b/app/views/tournaments/_tournament.html.erb
@@ -18,9 +18,7 @@
           <%= tournament.title%></span><br>
         <span id="<%= tournament.id %>-default-index-text" class="">
           <p class="pad-top-xs">
-            <b><%= tournament.city %></b>
-            –
-            <%= tournament.start %></p>
+            <b><%= tournament.city %></b>–<%= tournament.start %></p>
         </span>
         <span id="<%= tournament.id %>-hover-index-text" style="display:none">
           <p class="pad-top-xs"><%= raw(tournament.description[0..180] + "...") %></p>
