--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,7 @@
 <body>
 
   <nav class="navbar navbar-default">
-    <section class="container-fluid esportal-nav">
-      <div class="container" style="background-color:#B02B2C">
+      <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
@@ -23,7 +22,8 @@
             <span class="icon-bar"></span>
           </button>
           <a style="solid blue" class="navbar-brand" href="/tournaments">
-            <%= image_tag("esportal.png", :alt => "rss feed") %>
+            <i>ESPORTAL</i>
+           <!--  snowcone #image_tag("esportal.png", :alt => "rss feed") snowcone -->
           </a>
         </div>
         <div class="collapse navbar-collapse pull-right" id="myNavbar">
@@ -41,7 +41,7 @@
             <% end %>
           </ul>
         </div>
-      </div>
+
     </section>
   </nav>
 
