--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -9,7 +9,7 @@
   <div class="col-md-12 col-sm-12">
     <div class="row">
       <div class="col-md-6 col-sm-6 h1"><%= get_game_title(@tournament.game_id) %>: <span class="light-text"><%= @tournament.short_title %></span> </div>
-       <div class="col-md-6 light-text col-sm-6 h1 text-right">
+       <div class="col-md-6 light-text hidden-xs col-sm-6 h1 text-right">
         <span id="clockdiv">
           <span class="days text-right"></span> <span class="hours"></span><span class="minutes"></span><span class="seconds"></span>
         </span>
